Added pdf, cleaned README, synced nb w py file

--- a/EcoTransformer_GPT2_Demo.ipynb
+++ b/EcoTransformer_GPT2_Demo.ipynb
@@ -29,6 +29,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hPJdzhYkBAYB"
+      },
+      "outputs": [],
       "source": [
         "# Imports for running the test (not related to library)\n",
         "\n",
@@ -43,12 +48,7 @@
         "                          default_data_collator)\n",
         "\n",
         "import random"
-      ],
-      "metadata": {
-        "id": "hPJdzhYkBAYB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -69,17 +69,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-oOsTyDg-siT"
+      },
       "source": [
         "# Importing l1_distance.py\n",
         "\n",
         "The following block contains all the code from l1_distance.py, mimicking how you could use the library to modify the forward function of an existing architecture."
-      ],
-      "metadata": {
-        "id": "-oOsTyDg-siT"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bH-pGermA47Z"
+      },
+      "outputs": [],
       "source": [
         "# Imports\n",
         "import torch\n",
@@ -109,12 +114,7 @@
         "from transformers.modeling_utils import ALL_ATTENTION_FUNCTIONS, PreTrainedModel\n",
         "from transformers.pytorch_utils import Conv1D\n",
         "from transformers.utils import logging"
-      ],
-      "metadata": {
-        "id": "bH-pGermA47Z"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -168,14 +168,18 @@
         "\n",
         "  return result\n",
         "\n",
+        "L1_LAMBDA=-1\n",
         "\n",
-        "def L1_eager_attention_forward(module, query, key, value, attention_mask, head_mask=None, **kwargs):\n",
+        "def L1_eager_attention_forward(module, query, key, value, attention_mask, lambd=-L1_LAMBDA, head_mask=None, **kwargs):\n",
         "\n",
         "    \"\"\"\n",
-        "    Performs forward for eager attention using L1 normalization.\n",
+        "    Performs forward for eager attention using L1 normalization. \n",
+        "    \n",
+        "    Args:\n",
+        "    * lambd: tuning parameter lambda\n",
         "    \"\"\"\n",
         "\n",
-        "    attn_weights = generate_tensor_c_batch(query, key) * (-1)\n",
+        "    attn_weights = generate_tensor_c_batch(query, key) * (lambd)\n",
         "    #attn_weights = torch.matmul(query, key.transpose(-1, -2))\n",
         "\n",
         "    if module.scale_attn_weights:\n",
@@ -457,14 +461,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1BITlFvz_cWt"
+      },
       "source": [
         "## Custom Dataset\n",
         "\n",
         "We create a custom Dataset class to help organize the dataset for training."
-      ],
-      "metadata": {
-        "id": "1BITlFvz_cWt"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -804,17 +808,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "train(model, train_dataloader=train_loader, optimizer=optimizer, device=device, num_epochs=epochs)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9SILhgtaYAT1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train(model, train_dataloader=train_loader, optimizer=optimizer, device=device, num_epochs=epochs)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MgHigVXvm_N9"
+      },
+      "outputs": [],
       "source": [
         "def evaluate(model, eval_dataloader, device):\n",
         "    \"\"\"\n",
@@ -865,23 +874,18 @@
         "\n",
         "    print(f\"Evaluation Loss: {avg_loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
         "    return avg_loss, accuracy\n"
-      ],
-      "metadata": {
-        "id": "MgHigVXvm_N9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "evaluate(model, test_loader, device)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4L0kN7nvnAS9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "evaluate(model, test_loader, device)"
+      ]
     }
   ],
   "metadata": {
