--- a/EcoTransformer_GPT2_Demo.ipynb
+++ b/EcoTransformer_GPT2_Demo.ipynb
@@ -170,7 +170,7 @@
         "\n",
         "L1_LAMBDA=-1\n",
         "\n",
-        "def L1_eager_attention_forward(module, query, key, value, attention_mask, lambd=-L1_LAMBDA, head_mask=None, **kwargs):\n",
+        "def L1_eager_attention_forward(module, query, key, value, attention_mask, lambd=L1_LAMBDA, head_mask=None, **kwargs):\n",
         "\n",
         "    \"\"\"\n",
         "    Performs forward for eager attention using L1 normalization. \n",
